[package]
authors = ["{{authors}}"]
edition = "2021"
readme = "README.md"
name = "{{project-name}}"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }

# this lets you use `cargo fix`!
[[bin]]
name = "{{project-name}}"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
